--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "curl-request": "^1.1.1",
     "dotenv": "^6.2.0",
+    "excel4node": "^1.7.1",
     "express": "^4.16.4",
     "express-mysql-session": "^2.1.0",
     "express-session": "^1.15.6",
