--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "install": "concurrently \"cd server && npm install\" \"cd client && npm install\"",
     "start": "concurrently \"cd server && npm start\" \"cd client && npm run start\"",
-    "seed": "node ./server/db/seed"
+    "seed": "node ./server/src/db/seed"
   },
   "author": "",
   "license": "ISC",
