--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --ext js --watch src"
+    "start": "nodemon"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "prettier": "^1.17.1"
   },
   "dependencies": {
     "async": "^2.6.2",
