--- a/server/src/.env.example
+++ b/server/src/.env.example
@@ -1,6 +1,18 @@
+NODE_ENV=development
+
+PORT=8081
+
+ASU_KEY=wP3GUp8Lv3lB8rmbJ2cO4f4tcSJY3sCw
+ASU_SUMDU_API=http://asu.sumdu.edu.ua/api/getDivisions?key=
+
 DB_NAME=ep
 DB_HOST=localhost
-DB_USER=root
-DB_PASS=
-DB_POST=3306
+DB_USER=dev
+DB_PASS=dev
+DB_PORT=3306
+MY_ADMIN=3000
+
+ROUND_SALT=8
+
 JWT_SECRET=secret
+JWT_EXPIN=60m
