--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "async": "^2.6.2",
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
