--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.5",
+    "newman": "^4.5.0",
     "sequelize": "^4.42.0"
   }
 }
