--- a/server/src/.env
+++ b/server/src/.env
@@ -4,9 +4,9 @@ ASU_KEY=wP3GUp8Lv3lB8rmbJ2cO4f4tcSJY3sCw
 ASU_SUMDU_API=http://asu.sumdu.edu.ua/api/getDivisions?key=
 
 DB_NAME=ep
-DB_HOST=localhost
-DB_USER=dev
-DB_PASS=dev
+DB_HOST=127.0.0.1
+DB_USER=root
+DB_PASS=
 DB_PORT=3306
 MY_ADMIN=3000
 
