--- a/server/src/.env
+++ b/server/src/.env
@@ -5,8 +5,8 @@ ASU_SUMDU_API=http://asu.sumdu.edu.ua/api/getDivisions?key=
 
 DB_NAME=ep
 DB_HOST=127.0.0.1
-DB_USER=root
-DB_PASS=
+DB_USER=ep
+DB_PASS=eptest
 DB_PORT=3306
 MY_ADMIN=3000
 
